# bankrupt_parcer

./: .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyproject.toml.bak  ruff.toml  test.xlsx
alembic/: env.py
alembic/versions/: 636923eb3e25_init.py  913ceca01edc_init.py  e5ae9caa97b5_init.py
app/: config.py  logging_config.py  main.py
app/db/: models.py  repository.py  session.py
app/parcer/: chrome_connector.py  fedresurs_parser.py  kad_parser.py
app/services/: bankruptcy_service.py
app/utils/: excel_reader.py
data/: inn_data.xlsx
