[project]
name = "bankrupt-parcer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "tenacity>=9.1.4",
]
